--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,7 +1,31 @@
 
+
 @import'reset', 'header/header';
-@import'bodycard';
-@import'footer/footer';
+
+
+
+
+
+       
 @import 'darkmode.scss';
+
+@import'reset';
+
+
+@import'bodycard';
+
+
+
+    .footer_container_icones_list {
+        list-style: none;
+        padding: 0;
+        display: flex;
+        justify-content: space-between;
+    }
+
+
+@import'footer/footer';
+@import'panier.scss';
+
 
 
