--- a/assets/scss/footer/_footer.scss
+++ b/assets/scss/footer/_footer.scss
@@ -31,7 +31,11 @@ $screensizeFooter: "600px";
     }
 
     .footer_contact {
-        width: 20%;
+        width: 33%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
         background-color: #426d4a;
 
         @include media-maxwidth($screensizeFooter) {
@@ -50,86 +54,91 @@ $screensizeFooter: "600px";
     }
 
     .footer_container_about {
+        width: 33%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
         @include media-maxwidth($screensizeFooter) {
             width: 40%;
 
         }
-
     }
 
-
+    .footer_container_logo{
+        width: 33%;
+    }
 }
-
-//icones du footer//
-.footer_container_icones {
-    display: flex;
-    width: 100%;
-
-    img {
-        width: 90px;
-
-
-    }
-
-    .footer_container_icones_reseaux {
+    //icones du footer//
+    .footer_container_icones {
         display: flex;
-        justify-content: center;
-        align-items: center;
         width: 100%;
-        filter: invert(30%) sepia(115%) saturate(59%) hue-rotate(836deg) brightness(201%) contrast(247%);
+
+        img {
+            width: 90px;
 
 
-        .footer_container_icones_reseaux_list {
-            list-style: none;
+        }
+
+        .footer_container_icones_reseaux {
             display: flex;
-            align-content: center;
+            justify-content: center;
             align-items: center;
-
-            @include media-maxwidth($screensizeFooter) {
-
-                margin-right: 30%;
-
-            }
+            width: 100%;
+            filter: invert(30%) sepia(115%) saturate(59%) hue-rotate(836deg) brightness(201%) contrast(247%);
 
 
-
-            .footer_container_icones_reseaux_list_li {
-                margin-right: 100px;
+            .footer_container_icones_reseaux_list {
+                list-style: none;
                 display: flex;
                 align-content: center;
                 align-items: center;
 
                 @include media-maxwidth($screensizeFooter) {
-                    margin-right: 30px;
-                    margin-top: 35px;
-                    margin-bottom: 35px;
-                    width: 20px;
+
+                    margin-right: 30%;
 
                 }
 
 
-                img {
-                    width: 30px;
+
+                .footer_container_icones_reseaux_list_li {
+                    margin-right: 100px;
+                    display: flex;
+                    align-content: center;
+                    align-items: center;
+
+                    @include media-maxwidth($screensizeFooter) {
+                        margin-right: 30px;
+                        margin-top: 35px;
+                        margin-bottom: 35px;
+                        width: 20px;
+
+                    }
+
+
+                    img {
+                        width: 30px;
+
+                    }
 
                 }
-
             }
         }
     }
-}
 
 
-//bas du footer//
-.footer_politiqueConfi {
-    display: flex;
-    background-color: RGB(29, 95, 57);
-    width: 100%;
-    height: 50px;
-    justify-content: center;
-    align-items: center;
+    //bas du footer//
+    .footer_politiqueConfi {
+        display: flex;
+        background-color: RGB(29, 95, 57);
+        width: 100%;
+        height: 50px;
+        justify-content: center;
+        align-items: center;
 
-    .footer_politiqueConfi_P {
-        font-size: 20px;
-        color: white;
+        .footer_politiqueConfi_P {
+            font-size: 20px;
+            color: white;
+        }
     }
-}
