--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -1,34 +1,4 @@
 @charset "UTF-8";
-*, *::before, *::after {
-  box-sizing: border-box;
-}
-
-* {
-  margin: 0;
-}
-
-body {
-  line-height: 1.5;
-  -webkit-font-smoothing: antialiased;
-}
-
-img, picture, video, canvas, svg {
-  display: block;
-  max-width: 100%;
-}
-
-input, button, textarea, select {
-  font: inherit;
-}
-
-p, h1, h2, h3, h4, h5, h6 {
-  overflow-wrap: break-word;
-}
-
-#root, #__next {
-  isolation: isolate;
-}
-
 .section-home {
   background: url("../images/BandeEntete.png") no-repeat center center fixed;
   -o-object-fit: cover;
@@ -313,250 +283,6 @@ p, h1, h2, h3, h4, h5, h6 {
   isolation: isolate;
 }
 
-/* BODY CARD */
-#card-container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-content: flex-start;
-  justify-content: center;
-  z-index: -1;
-}
-
-.h2main {
-  font-size: 34px;
-  color: #215F3F;
-  font-family: "Fraunces";
-  text-align: center;
-}
-
-@media (max-width: 349px) {
-  .img-vege {
-    display: none;
-    width: 0px;
-    max-width: 0px;
-  }
-  .mission-container__content {
-    width: 100%;
-    text-align: center;
-    margin-left: 0px;
-  }
-  #title-mission {
-    text-align: center;
-  }
-}
-.desktop-image {
-  display: block;
-  display: block;
-  width: 400px;
-  height: 380px;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-.card {
-  width: 400px;
-  border-radius: 20px;
-  background-color: white;
-  margin: 20px;
-  box-shadow: 0 10px 12px rgba(0, 0, 0, 0.1);
-  position: relative;
-}
-.card__genre {
-  margin-top: 0px;
-  padding-left: 10px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  font-size: 15px;
-  color: hsl(228, 12%, 48%);
-  font-family: "Montserrat";
-  font-weight: 700;
-  text-transform: uppercase;
-  letter-spacing: 0.2rem;
-}
-.card__nom {
-  padding-left: 20px;
-  margin-bottom: 10px;
-  margin-top: 10px;
-  font-size: 20px;
-  font-family: "Fraunces";
-  color: #215F3F;
-}
-.card__prix {
-  padding-left: 20px;
-  margin-bottom: 10px;
-  margin-top: 5px;
-  font-size: medium;
-  font-family: "Fraunces";
-}
-.card__ingredients {
-  padding-left: 20px;
-  padding-right: 20px;
-  font-size: 15px;
-  font-family: "Montserrat";
-  font-weight: 500;
-  margin: 5px 5px 10px 0px;
-}
-.card__note {
-  display: flex;
-  flex-direction: column;
-  padding-left: 20px;
-}
-.card__lien {
-  display: flex;
-  justify-content: center;
-  padding: 20px;
-  font-family: "Montserrat";
-  font-weight: 500;
-}
-.card__order {
-  background-color: #215F3F;
-  color: white;
-  border-radius: 10px;
-  width: 400px;
-  text-align: center;
-  margin: auto;
-  height: 40px;
-  text-decoration: none;
-  padding-top: 8px;
-}
-
-.card__lien a:hover {
-  text-transform: uppercase;
-  transform: scale(1.05);
-  transition-duration: 200ms;
-}
-
-.card:hover {
-  transform: scale(1.05);
-  transition-duration: 200ms;
-}
-
-.content {
-  background-color: white;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
-}
-
-#filter-buttons {
-  text-align: center;
-}
-
-#filter-buttons button {
-  background-color: white;
-  border-color: green;
-  border-radius: 10px;
-  margin-right: 10px;
-}
-
-#filter-buttons button:hover {
-  transform: scale(1.08);
-  transition-duration: 200ms;
-}
-
-#reset {
-  text-align: center;
-  margin-top: 10px;
-}
-
-#reset-button {
-  background-color: white;
-  border-color: red;
-  border-radius: 10px;
-  margin-right: 5px;
-}
-
-#reset-button:hover {
-  transform: scale(1.08);
-  transition-duration: 200ms;
-}
-
-.mission h2 {
-  font-size: 34px;
-  color: #215F3F;
-  font-family: "Fraunces";
-  text-align: center;
-}
-
-.mission {
-  width: 100%;
-  box-sizing: border-box;
-  padding-top: 64px;
-}
-.mission__title {
-  padding: 36px 0;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-}
-.mission__slogan {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  text-align: center;
-  font-family: "Montserrat";
-  font-weight: 500;
-  font-size: 22px;
-}
-
-.mission-container {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  margin-top: 64px;
-  margin-bottom: 64px;
-}
-.mission-container__content {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  flex-wrap: wrap;
-  margin-left: 24px;
-  line-height: 1.4;
-  margin-top: 48px;
-  margin-right: 24px;
-  width: 50%;
-}
-
-.img-vege {
-  width: 50%;
-  margin: 0 24px;
-  aspect-ratio: 8/7;
-  position: relative;
-}
-
-figure img {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-  object-fit: cover;
-}
-
-.mission-container__content h3 {
-  font-size: 34px;
-  color: #215F3F;
-  font-family: "Fraunces";
-  text-align: left;
-  padding-bottom: 24px;
-}
-
-.mission-container__content p {
-  font-family: "Montserrat";
-  font-weight: 500;
-  font-size: 16px;
-}
-
-.footer_container_icones_list {
-  list-style: none;
-  padding: 0;
-  display: flex;
-  justify-content: space-between;
-}
-
 .footer {
   width: 100%;
   background-color: #426d4a;
@@ -905,129 +631,15 @@ figure img {
   font-family: "Montserrat";
   font-weight: 500;
   font-size: 16px;
-}
-
-.footer {
-  width: 100%;
-  background-color: #426d4a;
-}
-
-.footer_container_contact {
-  display: flex;
-  justify-content: space-between;
-  justify-content: space-evenly;
-  align-items: center;
-  width: 100%;
-  font-family: "Dancing Script";
-  font-size: 20px;
-  padding-top: 25px;
-  color: white;
-}
-@media (max-width: 600px) {
-  .footer_container_contact {
-    display: flex;
-    flex-direction: column;
-  }
-}
-.footer_container_contact .footer_contact {
-  width: 33%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: #426d4a;
-}
-@media (max-width: 600px) {
-  .footer_container_contact .footer_contact {
-    width: 40%;
-  }
-}
-.footer_container_contact strong {
-  font-size: 35px;
-}
-.footer_container_contact img {
-  width: 450px;
-}
-.footer_container_contact .footer_container_about {
-  width: 33%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-@media (max-width: 600px) {
-  .footer_container_contact .footer_container_about {
-    width: 40%;
-  }
-}
-.footer_container_contact .footer_container_logo {
-  width: 33%;
-}
-
-.footer_container_icones {
-  display: flex;
-  width: 100%;
-}
-.footer_container_icones img {
-  width: 90px;
-}
-.footer_container_icones .footer_container_icones_reseaux {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  filter: invert(30%) sepia(115%) saturate(59%) hue-rotate(836deg) brightness(201%) contrast(247%);
-}
-.footer_container_icones .footer_container_icones_reseaux .footer_container_icones_reseaux_list {
-  list-style: none;
-  display: flex;
-  align-content: center;
-  align-items: center;
-}
-@media (max-width: 600px) {
-  .footer_container_icones .footer_container_icones_reseaux .footer_container_icones_reseaux_list {
-    margin-right: 30%;
-  }
-}
-.footer_container_icones .footer_container_icones_reseaux .footer_container_icones_reseaux_list .footer_container_icones_reseaux_list_li {
-  margin-right: 100px;
-  display: flex;
-  align-content: center;
-  align-items: center;
-}
-@media (max-width: 600px) {
-  .footer_container_icones .footer_container_icones_reseaux .footer_container_icones_reseaux_list .footer_container_icones_reseaux_list_li {
-    margin-right: 30px;
-    margin-top: 35px;
-    margin-bottom: 35px;
-    width: 20px;
-  }
-}
-.footer_container_icones .footer_container_icones_reseaux .footer_container_icones_reseaux_list .footer_container_icones_reseaux_list_li img {
-  width: 30px;
-}
-
-.footer_politiqueConfi {
-  display: flex;
-  background-color: RGB(29, 95, 57);
-  width: 100%;
-  height: 50px;
-  justify-content: center;
-  align-items: center;
-}
-.footer_politiqueConfi .footer_politiqueConfi_P {
-  font-size: 20px;
-  color: white;
 }
 
 .modal {
-  display: none; /* By default, hide the modal /
-position: fixed;
-top: 0;
-left: 0;
-width: 100%;
-height: 100%;
-background-color: rgba(0, 0, 0, 0.5); / Semi-transparent background */
+  display: none; /* By default, hide the modal */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
   z-index: 9999;
 }
 .modal.active {
@@ -1036,7 +648,7 @@ background-color: rgba(0, 0, 0, 0.5); / Semi-transparent background */
   justify-content: center;
 }
 .modal .modal-content {
-  background-color: white;
+  background-color: rgb(128, 128, 128);
   padding: 20px;
   border-radius: 8px;
   width: 80%;
