--- a/assets/scss/panier.css
+++ b/assets/scss/panier.css
@@ -1,11 +1,10 @@
 .modal {
-  display: none; /* By default, hide the modal /
-position: fixed;
-top: 0;
-left: 0;
-width: 100%;
-height: 100%;
-background-color: rgba(0, 0, 0, 0.5); / Semi-transparent background */
+  display: none; /* By default, hide the modal */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
   z-index: 9999;
 }
 .modal.active {
@@ -14,7 +13,7 @@ background-color: rgba(0, 0, 0, 0.5); / Semi-transparent background */
   justify-content: center;
 }
 .modal .modal-content {
-  background-color: white;
+  background-color: rgb(128, 128, 128);
   padding: 20px;
   border-radius: 8px;
   width: 80%;
