--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,6 +1,5 @@
 
-
-@import'reset', 'header/header';
+@import 'header/header';
 
 
 
@@ -12,23 +11,13 @@
 @import'reset';
 
 
-@import'bodycard';
-
-
-
-    .footer_container_icones_list {
-        list-style: none;
-        padding: 0;
-        display: flex;
-        justify-content: space-between;
-    }
 
 
 @import'footer/footer';
 
 
 @import'bodycard';
-@import'footer/footer';
+
 @import'panier.scss';
 
 
