--- a/assets/scss/panier.scss
+++ b/assets/scss/panier.scss
@@ -1,81 +1,97 @@
-// Styles for the modal
+$mobile: 550px;
+
+@mixin media-maxwidth($screensize) {
+    @media (max-width: $screensize) {
+        @content;
+    }
+}
+
 .modal {
-    display: none; /* By default, hide the modal */
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
-    z-index: 9999;
-  
-    &.active {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-  
-    .modal-content {
-      background-color: rgb(128, 128, 128);
-      padding: 20px;
-      border-radius: 8px;
-      width: 80%;
-      max-width: 600px;
-  
-      .modal-header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        border-bottom: 1px solid #ccc;
-        padding-bottom: 10px;
-        margin-bottom: 20px;
-  
-        h2 {
-          font-size: 24px;
-          margin: 0;
-        }
-  
-        .close-button {
-          cursor: pointer;
-          font-size: 24px;
-        }
-      }
-  
-      table {
-        width: 100%;
-        border-collapse: collapse;
-        margin-bottom: 20px;
-  
-        th,
-        td {
-          border-bottom: 1px solid #ccc;
-          padding: 8px 0;
-          text-align: left;
-        }
-  
-        th {
-          font-weight: bold;
-        }
-      }
-  
-      .total_checkout {
-        font-size: 18px;
-        font-weight: bold;
-        margin-bottom: 10px;
-      }
-  
-      #checkoutButton,
-      .clear_btn {
-        padding: 10px 20px;
-        background-color: #3498db;
-        color: white;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-        margin-right: 10px;
-  
-        &:hover {
-          background-color: #2980b9;
-        }
-      }
-    }
+  position: fixed;
+  top: 20%;
+  left: 0;
+  width: 100%;
+  z-index: 9999;
+  display: none; /* Vous pouvez masquer la boîte modale par défaut */
+  justify-content: center;
+  align-items: center;
+}
+
+.modal.active {
+  display: flex;
+}
+
+.modal-content {
+  background-color: rgb(148, 148, 148);
+  padding: 20px;
+  border-radius: 8px;
+  width: 100%;
+  max-width: 50%;
+}
+
+.modal-content .modal-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 10px;
+  margin-bottom: 20px;
+}
+
+.modal-content .modal-header h2 {
+  font-size: 24px;
+  margin: 0;
+  font-family: 'Fraunces', sans-serif;
+}
+
+.modal-content .modal-header .close-button {
+  cursor: pointer;
+  font-size: 24px;
+  font-family: 'Fraunces', sans-serif;
+}
+
+.modal-content table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-bottom: 20px;
+}
+
+.modal-content th,
+.modal-content td {
+  border-bottom: 1px solid #ccc;
+  padding: 8px 0;
+  text-align: left;
+}
+
+.modal-content th {
+  font-weight: bold;
+  font-family: 'Fraunces', sans-serif;
+}
+
+.modal-content .total_checkout {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.modal-content #checkoutButton,
+.modal-content .clear_btn {
+  padding: 10px 20px;
+  background-color: #3498db;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-right: 10px;
+}
+
+.modal-content #checkoutButton:hover,
+.modal-content .clear_btn:hover {
+  background-color: #2980b9;
+}
+
+@include media-maxwidth($mobile) {
+  .clear_btn{
+    margin-top: 5%;
   }
+}
