--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,31 +1,26 @@
 
-
-@import'reset', 'header/header';
+@import 'header/header';
 
 
 
 
 
        
-@import 'darkmode.scss';
+@import 'darkmode/darkmode.scss';
 
 @import'reset';
 
 
-@import'bodycard';
-
-
-
-    .footer_container_icones_list {
-        list-style: none;
-        padding: 0;
-        display: flex;
-        justify-content: space-between;
-    }
 
 
 @import'footer/footer';
+
+
+@import'bodycard';
+
 @import'panier.scss';
+
+
 
 
 
